# energy_forecast

./: .gitignore  README.md  excutor_config.yaml  executor_config.yaml  pyproject.toml  requirements.txt  setup.sh  workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: run_pipeline.yml
app/: streamlit_ux_main.py  streamlit_ux_monitoring.py  streamlit_ux_results.py  streamlit_ux_utils.py
app/.github/workflows/: run_pipeline.yml
configs/: api_config.py  paths.py  paths_config.py  prophet.yaml
data-artifact/forecasts/: prophet_forecast.parquet
data-artifact/metrics/: prophet_metrics.json
flows/: pipeline.py
flows/ingestion/: fetch_target.py
flows/pipeline/: pipeline.py  run_full_pipeline_dagster.py
flows/process/: process_target.py
notebooks/: 01_base_model.ipynb
src/evaluating/: evaluate.py
src/flow/: run_full_pipeline_dagster.py
src/forecasting/: forecast.py
src/ingesting/: fetch_target.py  fetch_weather.py
src/ingestion/: fetch_target.py
src/pipeline/: run_full_pipeline_dagster.py
src/process/: process_target.py
src/processing/: merge_target_weather.py  process_target.py  process_weather.py
src/running/: run_model.py
src/training/: base_trainer.py  load_retrain_flag.py  model_trainer.py  models_trainer.py  update_retrain_flag.py
src/updating_artifacts/: overload_artifact.py
tests/: test_pipeline.py  test_upload_hf.py  test_validate_data.py
utils/: add_holidays.py  api_config.py  compute_metrics.py  logger.py  paths.py  save_files.py  upload_hf.py  validate_data.py  validate_target_data.py
(+6 files in other folders)
